k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bpa-website
  labels:
    app.kubernetes.io/managed-by: bpa
    app.kubernetes.io/component: website
